@@ -211,6 +211,8 @@
         <prefab_spawn_adjust partial_name="zztong_field_yucca_01" biomeTags="desert"/>
         <prefab_spawn_adjust partial_name="zztong_gyroport_01" biomeTags="desert"/>
         <prefab_spawn_adjust partial_name="zztong_motocross_01" biomeTags="forest"/>
+        <prefab_spawn_adjust partial_name="zztong_outback_adventure_01" biomeTags="desert"/>
+        <prefab_spawn_adjust partial_name="zztong_presidio_museum_01" biomeTags="desert"/>
         <prefab_spawn_adjust partial_name="zztong_revival_01" biomeTags="forest,desert"/>
         <prefab_spawn_adjust partial_name="zztong_stone_quarry_01" biomeTags="forest"/>
         <prefab_spawn_adjust partial_name="zztong_survivor_base_ruin_01" biomeTags="snow,wasteland"/>
